--- a/styles.css
+++ b/styles.css
@@ -7,15 +7,17 @@
 }
 
 body {
-    background-color: grey;
+    background-color: #031112;
     /* Source: https://www.hongkiat.com/blog/beautiful-minimalist-desktop-wallpapers/ */
     background-image: url("wallpaper2.jpg");
     /* background-size: contain; */
     background-size: cover;
+    background-repeat: no-repeat;
 }
 
 .big_container {
     display: flex;
+    flex-direction: row;
     
 }
 
@@ -26,9 +28,10 @@ body {
     justify-content: center;
     align-items: center;
     width: max(50vw, 100px);
+    height: fit-content;
     margin-top: 25vh;
-    padding-top: 50px;
-    padding-bottom: 50px;
+    padding-top: 30px;
+    padding-bottom: 30px;
 }
 
 .logo {
@@ -40,4 +43,9 @@ body {
 .logo_text {
     font-size: 3rem;
     color: #FFBE2D;
+}
+
+.right_panel {
+    background-color: antiquewhite;
+    height: 100vh;
 }
