--- a/styles.css
+++ b/styles.css
@@ -27,7 +27,7 @@ body {
     background-color: rgba(0, 0, 0, 0.782);
     justify-content: center;
     align-items: center;
-    width: max(50vw, 100px);
+    width: 50vw;
     height: fit-content;
     margin-top: 25vh;
     padding-top: 30px;
@@ -48,4 +48,53 @@ body {
 .right_panel {
     background-color: antiquewhite;
     height: 100vh;
+    width: 50vw;
+}
+
+form {
+    display: flex;
+    flex-direction: column;
+}
+
+.intro_text {
+    padding-top: 5vh;
+    padding-left: 5vw;
+    padding-right: 10vw;
+    font-size: 1.2rem;
+
+}
+
+.form_body {
+    border-top: 0.5px solid #8080806d;
+    box-shadow: 3px 3px 3px #8080806d;
+}
+
+.cta {
+    margin: 10px 10px 10px 10px;
+    font-size: 1.2rem;
+}
+
+.form_inputs {
+    /* Todo */
+    display: grid;
+    column-gap: 20px;
+    row-gap: 20px;
+    grid-template-columns: 1fr 1fr;
+}
+
+.form_item {
+    padding-left: 30px;
+    padding-right: 30px;
+}
+
+label {
+    display: block;
+}
+
+input[type="text"],
+input[type="email"],
+input[type="tel"] {
+    /* Todo: styles for input box */
+    background-color: transparent;
+    border: none;
 }
