--- a/styles.css
+++ b/styles.css
@@ -133,7 +133,7 @@ input:not(:placeholder-shown):not(:valid) {
 
 
 .sign-up-section {
-    padding-top: 30px;
+    padding-top: 10px;
 }
 
 .already-account {
@@ -165,4 +165,11 @@ button[type="submit"] {
 button[type="submit"]:hover {
     color: #241c15;
     background-color: #d9d7cd;
+}
+
+/* Add this class if passwords do not match */
+.password_red {
+    border: none;
+    outline: none;
+    border-bottom: 1px solid red;
 }
